--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
-<header></header>  <!-- 이 곳에 navbar.html이 동적으로 로드 -->
+<header></header>  <!-- 이 곳에 navbar.html이 동적으로 로드!! -->
 
 <div class="container" style="margin-left: 250px; padding-top: 20px;">
     <h1>메인 페이지</h1>
