--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,58 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>U+ Home Page</title>
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/mainPage.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <style>
-        .card:hover .view-details {
-            display: block;
-        }
-        .view-details {
-            display: none;
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-        }
-        .profile-card {
-            position: relative;
-            overflow: hidden;
-            transition: transform 0.3s ease;
-        }
-        .profile-card:hover {
-            transform: scale(1.05);
-        }
         .btn-custom {
             background-color: #ff007f;
             color: white;
             height: 45px;
             padding: 0 15px;
             border: none;
+            border-radius: 4px;
         }
+
+        .btn-custom:hover {
+            background-color: #ff005f;
+            color: white;
+        }
+
+        .card:hover .view-details {
+            display: block;
+        }
+
+        .profile-card {
+            position: relative;
+            overflow: hidden;
+            transition: transform 0.3s ease;
+        }
+
+        .profile-card:hover {
+            transform: scale(1.05);
+        }
+
         .card-img-top {
             width: 100%;
             height: 300px;
             object-fit: cover;
         }
+
+        .view-details {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            display: none; /* Hidden by default */
+        }
+
+        .profile-card:hover .view-details {
+            display: block; /* Show on hover */
+        }
+
         .card-title {
             font-weight: bold;
             font-size: 1.25rem;
             margin-bottom: 10px;
         }
+
         .card-text {
             font-size: 1rem;
             margin-bottom: 5px;
             color: #666;
         }
 
-        /* 모달 내부 텍스트 크기 조정 및 간격 설정 */
         .modal-body h5 {
-            font-size: 2rem; /* 이름 크기 조정 */
+            font-size: 2rem;
             margin-bottom: 20px;
         }
 
         .modal-body p {
-            font-size: 1.25rem; /* 정보 텍스트 크기 */
-            margin-bottom: 10px; /* 줄 간격 조정 */
+            font-size: 1.25rem;
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -100,19 +117,14 @@
         </div>
     </div>
 
-    <!-- 사용자 카드 목록 -->
     <div class="row" id="user-cards">
-        <!-- 카드들이 여기에 추가됩니다 -->
     </div>
 
-    <!-- 페이지네이션 -->
     <div class="d-flex justify-content-center">
         <ul class="pagination" id="pagination">
-            <!-- 페이지 버튼들이 여기에 추가됩니다 -->
         </ul>
     </div>
 
-    <!-- 모달 -->
     <div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -134,11 +146,13 @@
                             <p><strong>취미:</strong>
                                 <span id="modalUserHobbies" class="d-inline"></span>
                             </p>
+                            <p><string>가장 좋았던 경험:</string> <span id="modalUserExperience"></span></p>
                             <p><strong>앞으로의 계획:</strong> <span id="modalUserPlan"></span></p>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <a id="familiarityBtn" class="btn btn-primary">나와의 친밀도</a>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
                 </div>
             </div>
@@ -166,7 +180,7 @@
         const major = document.getElementById('major').value;
         const gender = document.getElementById('gender').value;
 
-        fetch(`/api/users?name=${name}&mbti=${mbti}&major=${major}&gender=${gender}&page=${page}`)
+        fetch(`/api/users?name=${name}&mbti=${mbti}&major=${major}&gender=${gender}&page=${page}&size=9`)
             .then(response => response.json())
             .then(data => {
                 renderUserCards(data.response.content);
@@ -202,23 +216,26 @@
             .then(response => response.json())
             .then(data => {
                 const user = data.response;
-
                 document.getElementById('modalProfileImage').src = `data:image/png;base64,${user.profileImage}`;
                 document.getElementById('modalUserName').innerText = user.name;
-
                 const gender = user.gender === 'male' ? '남성' : '여성';
                 document.getElementById('modalUserGender').innerText = gender;
                 document.getElementById('modalUserMbti').innerText = user.mbti;
                 document.getElementById('modalUserRegion').innerText = user.region;
                 document.getElementById('modalUserMajor').innerText = user.major;
-                document.getElementById('modalUserPlan').innerText = user.plan;
 
-                // 취미를 리스트로 표시
                 const hobbiesList = document.getElementById('modalUserHobbies');
-                hobbiesList.innerHTML = ''; // 기존 취미 초기화
+                hobbiesList.innerHTML = '';  // 기존 취미 초기화
                 user.hobbies.forEach(hobby => {
                     hobbiesList.innerHTML += `<span class="badge bg-pink text-white me-2" style="font-size: 1.025rem; padding: 10px 15px;">${hobby.name}</span>`;
                 });
+
+                document.getElementById('modalUserExperience').innerText = user.niceExperience;
+                document.getElementById('modalUserPlan').innerText = user.plan;
+
+                // Update the link to pass the userId
+                const familiarityBtn = document.getElementById('familiarityBtn');
+                familiarityBtn.href = `/familiarity.html?userId=${userId}`;
 
                 const userModal = new bootstrap.Modal(document.getElementById('userModal'));
                 userModal.show();
@@ -245,7 +262,6 @@
         }
     }
 </script>
-
 </body>
 </html>
 
