chore: Dto 순서 틀렸던 부분 수정

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -146,7 +146,7 @@
                             <p><strong>취미:</strong>
                                 <span id="modalUserHobbies" class="d-inline"></span>
                             </p>
-                            <p><string>가장 좋았던 경험:</string> <span id="modalUserExperience"></span></p>
+                            <p><strong>가장 좋았던 경험:</strong> <span id="modalUserExperience"></span></p>
                             <p><strong>앞으로의 계획:</strong> <span id="modalUserPlan"></span></p>
                         </div>
                     </div>
