--- a/src/main/resources/static/map.html
+++ b/src/main/resources/static/map.html
@@ -5,74 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>U+ Home Page</title>
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/map.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <!-- Bootstrap Icons 추가 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
-<header></header>  <!-- 이 곳에 navbar.html이 동적으로 로드!! -->
 
-<div class="container" style="margin-left: 250px; padding-top: 20px;">
-    <h1>지도 페이지</h1>
-    <p>콘텐츠</p>
-    <p>지도</p>
-    <!-- 지도를 표시할 div 입니다 -->
-    <div id="map" style="width:100%;height:700px;"></div>
+<header>
+    <!-- Navbar HTML이 동적으로 로드됨 -->
+</header>
+
+<div class="container">
+    <h1 class="text-center">지도 페이지</h1>
+    <p class="text-center">다음은 사용자들의 위치를 표시한 지도입니다.</p>
+    <div class="map-container" id="map"></div>
 </div>
 
-<!-- 지도생성 script -->
-<script type="text/javascript"
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=b725e40e2b697b42e1aac0b02c8a06ee&libraries=clusterer"></script>
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=b725e40e2b697b42e1aac0b02c8a06ee&libraries=clusterer"></script>
 <script>
-    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+    var mapContainer = document.getElementById('map'),
         mapOption = {
-            center: new kakao.maps.LatLng(36.84, 127.77), // 지도의 중심좌표
-            level: 13 // 지도의 확대 레벨
+            center: new kakao.maps.LatLng(36.84, 127.77),
+            level: 13
         };
 
-    // 지도를 표시할 div와 지도 옵션으로 지도를 생성합니다
     var map = new kakao.maps.Map(mapContainer, mapOption);
-</script>
 
-<!-- 마커가 표시될 위치입니다 -->
-<script>
-    // 마커를 저장할 배열 생성
     var markers = [];
 
-    // 서버로부터 프로필 데이터 가져오기
     fetch('/api/profiles')
         .then(response => response.json())
         .then(data => {
-            console.log("데이터를 가져왔습니다.", data); // 데이터가 성공적으로 가져왔는지 확인
+            console.log("데이터를 가져왔습니다.", data);
 
-            // 각 프로필 처리
             data.forEach(profile => {
                 if (profile.region && profile.region.latitude && profile.region.longitude && profile.user && profile.user.name) {
-                    // 마커 위치 생성
                     var position = new kakao.maps.LatLng(profile.region.latitude, profile.region.longitude);
 
-                    // 마커 생성
                     var marker = new kakao.maps.Marker({
-                        map: map, // 마커를 표시할 지도
-                        position: position, // 마커 위치
-                        title: profile.user.name // 마커 제목 설정
+                        map: map,
+                        position: position,
+                        title: profile.user.name
                     });
 
-                    // 마커를 배열에 추가
                     markers.push(marker);
 
-                    // 정보 창 생성
                     var infowindow = new kakao.maps.InfoWindow({
-                        content: `<div style="padding:5px;">${profile.user.name}</div>`
+                        content: `<div style="padding: 3px 5px; background-color: #fff; border-radius: 6px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); font-size: 12px; color: #333; width: 150px; height: auto; display: flex; flex-direction: column; align-items: center; text-align: center; font-family: 'Arial', sans-serif;">
+                            <!-- 이름을 클릭 시 디테일 페이지로 이동 -->
+                            <a href="detail.html?userId=${profile.user.id}" style="text-decoration: none; color: #333;">
+                                <strong style="font-size: 14px; font-weight: bold;">${profile.user.name}</strong>
+                            </a>
+                            <span style="margin-top: 2px; font-size: 12px; color: #666;">${profile.region.name || '주소 정보 없음'}</span>
+                        </div>`
                     });
 
-                    // 마커 클릭 시 동작
                     kakao.maps.event.addListener(marker, 'click', function() {
-                        // 정보 창이 열려 있으면 닫고, 열려있지 않다면 열기
                         if (infowindow.getMap()) {
-                            infowindow.close();  // 정보 창 닫기
+                            infowindow.close();
                         } else {
-                            infowindow.open(map, marker); // 정보 창 열기
+                            infowindow.open(map, marker);
                         }
                     });
                 } else {
