--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -12,7 +12,7 @@
                 <a href="#"><i class="bi bi-person"></i> 프로필 등록/수정</a>
             </li>
             <li>
-                <a href="#"><i class="bi bi-geo-alt"></i> 사는 지역</a>
+                <a href="/map.html"><i class="bi bi-geo-alt"></i> 사는 지역</a>
             </li>
             <li>
                 <a href="#"><i class="bi bi-heart"></i> 궁합 보기</a>
