--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -23,7 +23,7 @@
         </ul>
 
         <div class="logout-section p-3 mt-auto">
-            <a href="#" class="btn btn-outline-light btn-block"><i class="bi bi-box-arrow-right"></i> 로그아웃</a>
+            <a id="logoutBtn" class="btn btn-outline-light btn-block"><i class="bi bi-box-arrow-right"></i> 로그아웃</a>
         </div>
     </nav>
 </div>
