--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <title>U+ Home Page</title>
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
@@ -150,9 +151,19 @@
 <script src="/js/navbar.js"></script>
 
 <script>
+
     // 페이지 로드 시 유저 데이터 가져오기
     document.addEventListener('DOMContentLoaded', function () {
         fetchUsers();
+
+        // 로그인 버튼 클릭 시 로그아웃 기능 실행
+        const loginBtn = document.getElementById('loginBtn');
+        if (loginBtn) {
+            loginBtn.addEventListener('click', function() {
+                logout();
+                console.log("로그아웃");
+            });
+        }
 
         document.getElementById('search-form').addEventListener('submit', function (e) {
             e.preventDefault();
@@ -244,6 +255,35 @@
             }
         }
     }
+
+    async function logout() {
+        try {
+            // 로그아웃 요청을 보내는 URL
+            let response = await fetch('/logout', {
+                method: 'POST', // POST 메소드 사용
+                credentials: 'include', // 쿠키를 포함하여 요청
+                headers: {
+                    'Content-Type': 'application/json' // JSON 형식의 데이터 전송
+                }
+            });
+
+            if (response.ok) {
+                // 로그아웃 성공 시 로컬 스토리지에서 토큰 삭제
+                localStorage.removeItem("accessToken");
+                alert("로그아웃 되었습니다.");
+                window.location.href = "/login.html"; // 로그인 페이지로 리다이렉트
+            } else {
+                // 로그아웃 실패 시 알림
+                alert("로그아웃에 실패했습니다.");
+            }
+        } catch (error) {
+            // 오류 처리
+            console.error('Error during logout:', error);
+            alert("로그아웃 과정에서 오류가 발생했습니다.");
+        }
+    }
+
+
 </script>
 
 </body>
