통계페이지 작업중

--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -18,7 +18,7 @@
                 <a href="#"><i class="bi bi-heart"></i> 궁합 보기</a>
             </li>
             <li>
-                <a href="#"><i class="bi bi-bar-chart"></i> 정보 통계</a>
+                <a href="/statistics.html"><i class="bi bi-bar-chart"></i> 정보 통계</a>
             </li>
             <li>
                 <a href="#"><i class="bi bi-chat-dots"></i> 취미 공유</a>
