--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>U+ Sign Up Page</title>
+    <title>U+ 회원가입 페이지</title>
     <style>
-        /* Reset some default styling */
+        /* 기본 스타일 리셋 */
         body, h1, label, input, button, select {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
 
-        /* Set up basic styling for the body */
+        /* 기본 본문 스타일 설정 */
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
@@ -24,7 +24,7 @@
             margin: 0;
         }
 
-        /* Style the signup container */
+        /* 회원가입 컨테이너 스타일 */
         .signup-container {
             background-color: #fff;
             padding: 2rem;
@@ -32,13 +32,13 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        /* Style the signup form */
+        /* 회원가입 폼 스타일 */
         .signup-form {
             display: flex;
             flex-direction: column;
         }
 
-        /* Style the form headings */
+        /* 폼 제목 스타일 */
         .signup-form h1 {
             margin-bottom: 1rem;
             font-size: 24px;
@@ -46,7 +46,7 @@
             text-align: center;
         }
 
-        /* Style the form labels and inputs */
+        /* 폼 레이블 및 입력 필드 스타일 */
         .signup-form label {
             margin-bottom: 0.5rem;
             font-size: 16px;
@@ -62,7 +62,7 @@
             font-size: 16px;
         }
 
-        /* Style the submit button */
+        /* 제출 버튼 스타일 */
         .signup-form button {
             padding: 0.75rem;
             border: none;
@@ -78,7 +78,7 @@
             background-color: #0056b3;
         }
 
-        /* Style the login link */
+        /* 로그인 링크 스타일 */
         .login-link {
             margin-top: 1rem;
             text-align: center;
@@ -98,44 +98,46 @@
 <body>
 <div class="signup-container">
     <form class="signup-form" id="signupForm">
-        <h1>Sign Up</h1>
+        <h1>회원가입</h1>
 
-        <label for="name">Name:</label>
+        <label for="name">이름:</label>
         <input type="text" id="name" name="name" required>
 
-        <label for="username">Username:</label>
+        <label for="username">사용자명:</label>
         <input type="text" id="username" name="username" required>
 
-        <label for="password">Password:</label>
+        <label for="password">비밀번호:</label>
         <input type="password" id="password" name="password" required>
 
-        <label for="role">Role:</label>
+        <label for="role">역할:</label>
         <select id="role" name="role" required>
-            <option value="">Select Role</option>
-            <option value="ADMIN">Admin</option>
-            <option value="USER">User</option>
+            <option value="">역할 선택</option>
+            <option value="ADMIN">관리자</option>
+            <option value="USER">사용자</option>
         </select>
 
-        <label for="gender">Gender:</label>
+        <label for="gender">성별:</label>
         <select id="gender" name="gender" required>
-            <option value="">Select Gender</option>
-            <option value="MALE">Male</option>
-            <option value="FEMALE">Female</option>
-            <option value="OTHER">Other</option>
+            <option value="">성별 선택</option>
+            <option value="male">남성</option>
+            <option value="female">여성</option>
+            <option value="other">기타</option>
         </select>
 
-        <button type="button" id="btnSignUp">Sign Up</button>
+        <button type="button" id="btnSignUp">회원가입</button>
         <div class="login-link">
-            <p>Already have an account? <a href="login.html">Login</a></p>
+            <p>이미 계정이 있으신가요? <a href="login.html">로그인</a></p>
         </div>
     </form>
 </div>
 
 <script>
+    // 페이지 로드 시 실행
     window.onload = function() {
         document.querySelector("#btnSignUp").onclick = signUp;
     }
 
+    // 회원가입 처리 함수
     async function signUp() {
         let name = document.querySelector("#name").value;
         let username = document.querySelector("#username").value;
@@ -165,14 +167,14 @@
             let response = await fetch(url, fetchOptions);
 
             if (!response.ok) {
-                throw new Error('Network response was not ok');
+                throw new Error('네트워크 응답이 올바르지 않습니다.');
             }
 
             alert("회원가입에 성공하였습니다.");
             window.location.href = "login.html";
 
         } catch (error) {
-            console.error('Error during sign-up:', error);
+            console.error('회원가입 중 오류 발생:', error);
             alert("회원가입 과정에서 오류가 발생했습니다.");
         }
     }
