--- a/src/main/resources/static/map.html
+++ b/src/main/resources/static/map.html
@@ -16,7 +16,7 @@
 </header>
 
 <div class="container">
-    <h1 class="text-center">지도 페이지</h1>
+    <h1 class="text-center">동료들이 사는 곳</h1>
     <p class="text-center">다음은 사용자들의 위치를 표시한 지도입니다.</p>
 
     <!-- 지도과 사용자 목록을 감싸는 컨테이너 -->
