chore: 프론트 화면 픽셀 수정

--- a/src/main/resources/static/map.html
+++ b/src/main/resources/static/map.html
@@ -15,8 +15,8 @@
     <!-- Navbar HTML이 동적으로 로드됨 -->
 </header>
 
-<div class="container">
-    <h1 class="text-center">동료들이 사는 곳</h1>
+<div class="container" style="margin-left: 400px; padding-top: 20px;">
+    <h1 class="text-center">동료들이 사는 지역</h1>
     <p class="text-center">다음은 사용자들의 위치를 표시한 지도입니다.</p>
 
     <!-- 지도과 사용자 목록을 감싸는 컨테이너 -->
