[FEAT] 프로필 등록 및 수정

--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -3,10 +3,11 @@
     <nav id="sidebar" class="bg-pink d-flex flex-column">
         <ul class="list-unstyled components flex-grow-1">
             <li class="active">
-                <a href="#"><i class="bi bi-house-door"></i> 홈</a>
+                <a href="index.html"><i class="bi bi-house-door"></i> 홈</a>
             </li>
-            <li>
-                <a href="#"><i class="bi bi-person"></i> 프로필 등록/수정</a>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#profileModal">
+                <i class="bi bi-person"></i> 프로필 등록/수정
+            </a>
             </li>
             <li>
                 <a href="#"><i class="bi bi-geo-alt"></i> 사는 지역</a>
@@ -18,7 +19,7 @@
                 <a href="#"><i class="bi bi-bar-chart"></i> 정보 통계</a>
             </li>
             <li>
-                <a href="#"><i class="bi bi-chat-dots"></i> 취미 공유</a>
+                <a href="board.html"><i class="bi bi-chat-dots"></i> 취미 공유</a>
             </li>
         </ul>
 
