--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -146,6 +146,114 @@
     </div>
 </div>
 
+<!-- 프로필 등록/수정 모달 -->
+<div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: #ff007f;">
+                <h5 class="modal-title text-white" id="profileModalLabel">프로필 등록/수정</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="profileForm">
+                    <div class="row">
+                        <!-- 프로필 이미지 -->
+                        <div class="col-md-4 mb-3">
+                            <label for="profileImage" class="form-label">프로필 이미지</label>
+                            <input type="file" class="form-control" id="profileImage" accept="image/png, image/jpeg, image/jpg, image/gif">
+                            <div class="text-center">
+                                <img id="profilePreview" src="img.png" class="img-fluid rounded mt-2" alt="프로필 이미지 미리보기" style="width: 300px; height: 300px; object-fit: cover;">
+                            </div>
+                        </div>
+
+                        <!-- 프로필 정보 입력란 -->
+                        <div class="col-md-8">
+                            <div class="mb-3">
+                                <label for="mbti" class="form-label">MBTI</label>
+                                <select class="form-select" id="profile_mbti" required>
+                                    <option value="">선택하세요</option>
+                                    <option value="ISTJ">ISTJ</option>
+                                    <option value="ESTJ">ESTJ</option>
+                                    <option value="INTJ">INTJ</option>
+                                    <option value="ENTJ">ENTJ</option>
+                                    <option value="ISFJ">ISFJ</option>
+                                    <option value="ESFJ">ESFJ</option>
+                                    <option value="INFJ">INFJ</option>
+                                    <option value="ENFJ">ENFJ</option>
+                                    <option value="ISTP">ISTP</option>
+                                    <option value="ESTP">ESTP</option>
+                                    <option value="INTP">INTP</option>
+                                    <option value="ENTP">ENTP</option>
+                                    <option value="ISFP">ISFP</option>
+                                    <option value="ESFP">ESFP</option>
+                                    <option value="INFP">INFP</option>
+                                    <option value="ENFP">ENFP</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="region" class="form-label">사는 지역</label>
+                                <input type="text" class="form-control" id="region" placeholder="지역을 입력하세요" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="major" class="form-label">전공</label>
+                                <input type="text" class="form-control" id="profile_major" placeholder="전공을 입력하세요" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="niceExperience" class="form-label">좋았던 경험</label>
+                                <textarea class="form-control" id="niceExperience" placeholder="좋았던 경험을 입력하세요" rows="3" required></textarea>
+                            </div>
+                            <div class="mb-3">
+                                <label for="plan" class="form-label">앞으로의 계획</label>
+                                <textarea class="form-control" id="plan" placeholder="계획을 입력하세요" rows="3" required></textarea>
+                            </div>
+
+                            <!-- 취미 선택 -->
+                            <div class="mb-3">
+                                <label class="form-label">취미 <span class="text-danger">*</span></label>
+                                <div class="d-flex flex-wrap">
+                                    <div class="form-check me-3">
+                                        <input class="form-check-input hobby-checkbox" type="checkbox" value="CULTURAL_LIFE" id="hobby1">
+                                        <label class="form-check-label" for="hobby1">문화생활</label>
+                                    </div>
+                                    <div class="form-check me-3">
+                                        <input class="form-check-input hobby-checkbox" type="checkbox" value="EXERCISE" id="hobby2">
+                                        <label class="form-check-label" for="hobby2">운동</label>
+                                    </div>
+                                    <div class="form-check me-3">
+                                        <input class="form-check-input hobby-checkbox" type="checkbox" value="FOOD" id="hobby3">
+                                        <label class="form-check-label" for="hobby3">음식</label>
+                                    </div>
+                                    <div class="form-check me-3">
+                                        <input class="form-check-input hobby-checkbox" type="checkbox" value="GAME" id="hobby4">
+                                        <label class="form-check-label" for="hobby4">게임</label>
+                                    </div>
+                                    <div class="form-check me-3">
+                                        <input class="form-check-input hobby-checkbox" type="checkbox" value="MUSIC" id="hobby5">
+                                        <label class="form-check-label" for="hobby5">음악</label>
+                                    </div>
+                                    <div class="form-check me-3">
+                                        <input class="form-check-input hobby-checkbox" type="checkbox" value="TRAVEL" id="hobby6">
+                                        <label class="form-check-label" for="hobby6">여행</label>
+                                    </div>
+                                    <div class="form-check me-3">
+                                        <input class="form-check-input hobby-checkbox" type="checkbox" value="ETC" id="hobby7">
+                                        <label class="form-check-label" for="hobby7">기타</label>
+                                    </div>
+                                </div>
+                                <div class="invalid-feedback" id="hobbyError" style="display: none;">하나 이상의 취미를 선택하세요.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+                        <button type="submit" class="btn btn-primary">저장</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/navbar.js"></script>
 
@@ -159,6 +267,62 @@
             fetchUsers(0);
         });
     });
+
+    // 폼 제출 시 하나 이상의 취미를 선택하게 강제하는 유효성 검사
+    document.getElementById('profileForm').addEventListener('submit', function(event) {
+        const hobbies = document.querySelectorAll('.hobby-checkbox:checked');
+        const hobbyError = document.getElementById('hobbyError');
+        if (hobbies.length === 0) {
+            event.preventDefault(); // 제출 방지
+            hobbyError.style.display = 'block'; // 에러 메시지 표시
+        } else {
+            hobbyError.style.display = 'none'; // 에러 메시지 숨기기
+        }
+    });
+
+    // 이미지 파일 선택 시 미리보기 업데이트
+    document.getElementById('profileImage').addEventListener('change', function(event) {
+        const file = event.target.files[0];
+        const preview = document.getElementById('profilePreview');
+
+        if (file && file.type.match('image.*')) {
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                preview.src = e.target.result;
+            };
+            reader.readAsDataURL(file);
+        } else {
+            preview.src = 'img.png';  // 기본 이미지로 초기화
+        }
+    });
+
+
+    // 프로필 저장 로직 (POST)
+    document.getElementById('profileForm').addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        const formData = new FormData();
+        formData.append('niceExperience', document.getElementById('niceExperience').value);
+        formData.append('mbti', document.getElementById('mbti').value);
+        formData.append('region', document.getElementById('region').value);
+        formData.append('major', document.getElementById('major').value);
+        formData.append('plan', document.getElementById('plan').value);
+        const imageFile = document.getElementById('profileImage').files[0];
+        if (imageFile) {
+            formData.append('profileImage', imageFile);
+        }
+
+        fetch(`/api/profiles/${userId}`, {
+            method: 'POST',
+            body: formData
+        }).then(response => response.json())
+            .then(data => {
+                alert('프로필이 저장되었습니다.');
+                // 필요한 경우 페이지를 리로드하거나 UI를 업데이트
+                location.reload();
+            });
+    });
+
 
     function fetchUsers(page = 0) {
         const name = document.getElementById('name').value;
@@ -243,6 +407,34 @@
                 pagination.innerHTML += `<li class="page-item"><a class="page-link" href="#" onclick="fetchUsers(${pageData.number + 1})">다음</a></li>`;
             }
         }
+    }
+
+    // 프로필 등록/수정 모달 로드 시 데이터 처리 (GET)
+    function loadUserProfile(userId) {
+        fetch(`/api/profiles/${userId}`)
+            .then(response => response.json())
+            .then(data => {
+                if (data) {
+                    // 데이터가 있으면 모달에 해당 정보를 채워줍니다
+                    document.getElementById('niceExperience').value = data.name || '';
+                    document.getElementById('profile_mbti').value = data.mbti || '';
+                    document.getElementById('region').value = data.region || '';
+                    document.getElementById('profile_major').value = data.major || '';
+                    document.getElementById('plan').value = data.plan || '';
+
+                    if (data.profileImage) {
+                        document.getElementById('profilePreview').src = `data:image/png;base64,${data.profileImage}`;
+                    } else {
+                        document.getElementById('profilePreview').src = ''; // 이미지가 없을 경우
+                    }
+                } else {
+                    // 데이터가 없으면 placeholder 표시
+                    document.getElementById('niceExperience').placeholder = '좋았던 경험을 입력하세요';
+                    document.getElementById('region').placeholder = '사는 지역을 입력하세요';
+                    document.getElementById('profile_major').placeholder = '전공을 입력하세요';
+                    document.getElementById('plan').placeholder = '계획을 입력하세요';
+                }
+            });
     }
 </script>
 
