chore: navbar 로그인, 로그아웃 동작하도록 수정

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -99,7 +99,7 @@
     <form class="login-form" id="loginForm">
         <h1>로그인</h1>
         <label for="username">사용자 이름:</label>
-        <input type="text" id="username" name="username" value="admin" required>
+        <input type="text" id="username" name="username" value="user1" required>
 
         <label for="password">비밀번호:</label>
         <input type="password" id="password" name="password" value="1234" required>
@@ -108,8 +108,6 @@
         <div class="signup-link">
             <p>계정이 없으신가요? <a href="signup.html">회원가입</a></p>
         </div>
-        <button type="button" id="btnLogout">로그아웃</button>
-
     </form>
 </div>
 
@@ -147,7 +145,7 @@
                 // Access Token을 로컬 스토리지에 저장
                 localStorage.setItem("accessToken", accessToken);
                 alert("로그인에 성공하였습니다.");
-                window.location.href = "index.html";
+                window.location.href = "/";
             }
         } catch (error) {
             console.error('로그인 중 오류 발생:', error);
