--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>U+ 회원가입 페이지</title>
+    <title>유레카 회원가입 페이지</title>
     <style>
         /* 기본 스타일 리셋 */
         body, h1, label, input, button, select {
