--- a/src/main/resources/static/board.html
+++ b/src/main/resources/static/board.html
@@ -104,8 +104,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="/js/auth.js"></script>
 <script src="/js/navbar.js"></script>
-
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         fetchPosts();
