--- a/src/main/resources/static/map.html
+++ b/src/main/resources/static/map.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>U+ Home Page</title>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <title>유레카 정보 관리</title>
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/map.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
@@ -176,6 +177,6 @@
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/navbar.js"></script>
-</body>
+<script type="module" src="/js/auth.js"></script>
+<script src="/js/navbar.js"></script></body>
 </html>
